[package]
authors = ["Javier Poremski <javier@poremski.se>"]
categories = ["command-line-utilities"]
description = "Validate a digit sequence using Luhn algorithm and calculates the sequence’s next validation digit."
documentation = "https://docs.rs/luhncalc"
edition = "2018"
homepage = "https://github.com/poremski/luhncalc"
keywords = ["terminal", "math", "security", "utility", "tool"]
license = "MIT/Apache-2.0"
name = "luhncalc"
readme = "README.md"
repository = "https://github.com/poremski/luhncalc"
version = "1.0.0"

[dependencies]
digits_iterator = "0.1"
luhn = "1.0"
structopt = "0.3"
